Update KuGou.java